remove unused menu layer and generalize progress bar